--- a/SEBotV2/SEBotV2.csproj
+++ b/SEBotV2/SEBotV2.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Costura.Fody" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Discord.Net" Version="3.18.0-beta.3" />
   </ItemGroup>
 
