--- a/SEBotV2/SEBotV2.csproj
+++ b/SEBotV2/SEBotV2.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <RuntimeIdentifiers>win-x64;linux-x64;linux-arm64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,5 +27,10 @@
     <PackageReference Include="Okolni.Source.Query" Version="2.1.0" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
+  <Target Name="KillAllInstances" BeforeTargets="BeforeBuild" Condition="'$(OS)' == 'Windows_NT'">
+    <Exec Command="taskkill /F /IM SEBotV2.exe" IgnoreExitCode="true" ContinueOnError="true" />
+    <Message Text="Killed any running SEBotV2 instances" Importance="high" />
+    <Exec Command="powershell -Command Start-Sleep -Seconds 1" />
+  </Target>
 
 </Project>
